--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "gatsby-plugin-react-helmet": "^3.0.4",
         "gatsby-plugin-sass": "^2.0.7",
         "gatsby-plugin-typescript": "^2.0.9",
+        "gatsby-remark-external-links": "^0.0.4",
         "gatsby-source-filesystem": "^2.0.12",
         "gatsby-transformer-remark": "^2.1.15",
         "lodash": "^4.17.11",
