--- a/package.json
+++ b/package.json
@@ -1,59 +1,58 @@
 {
-    "name": "iamchriswilson.com",
-    "description": "Personal website of Chris Wilson",
-    "version": "1.0.0",
-    "author": "Chris Wilson",
-    "dependencies": {
-        "@types/uuid": "^3.4.4",
-        "gatsby": "^2.0.66",
-        "gatsby-image": "^2.0.23",
-        "gatsby-plugin-manifest": "^2.2.40",
-        "gatsby-plugin-netlify": "^2.0.6",
-        "gatsby-plugin-netlify-cms": "^4.1.37",
-        "gatsby-plugin-react-helmet": "^3.0.4",
-        "gatsby-plugin-sass": "^2.0.7",
-        "gatsby-plugin-typescript": "^2.0.9",
-        "gatsby-remark-external-links": "^0.0.4",
-        "gatsby-source-filesystem": "^2.0.12",
-        "gatsby-transformer-remark": "^2.1.15",
-        "lodash": "^4.17.11",
-        "lodash-webpack-plugin": "^0.11.4",
-        "netlify-cms-app": "^2.11.11",
-        "node-sass": "^4.11.0",
-        "prop-types": "^15.6.0",
-        "react": "^16.2.0",
-        "react-dom": "^16.4.1",
-        "react-helmet": "^5.2.0",
-        "uuid": "^3.2.1"
-    },
-    "keywords": [
-        "gatsby",
-        "typescript",
-        "netlify"
-    ],
-    "license": "MIT",
-    "main": "n/a",
-    "scripts": {
-        "clean": "rimraf .cache public",
-        "start:app": "npm run develop",
-        "start:lambda": "netlify-lambda serve src/lambda",
-        "start": "run-p start:**",
-        "build:app": "npm run clean && gatsby build",
-        "build:lambda": "netlify-lambda build src/lambda",
-        "build": "run-p build:**",
-        "develop": "npm run clean && gatsby develop",
-        "serve": "gatsby serve",
-        "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.js}\""
-    },
-    "devDependencies": {
-        "@types/lodash": "^4.14.121",
-        "@types/netlify-identity-widget": "^1.4.1",
-        "@types/react-helmet": "^5.0.8",
-        "http-proxy-middleware": "^0.20.0",
-        "netlify-lambda": "^1.4.2",
-        "npm-run-all": "^4.1.5",
-        "prettier": "^1.15.3",
-        "rimraf": "^3.0.1",
-        "typescript": "^3.3.3333"
-    }
+  "name": "iamchriswilson.com",
+  "description": "Personal website of Chris Wilson",
+  "version": "1.0.0",
+  "author": "Chris Wilson",
+  "dependencies": {
+    "@types/google.analytics": "^0.0.40",
+    "@types/uuid": "^3.4.4",
+    "gatsby": "^2.0.66",
+    "gatsby-image": "^2.0.23",
+    "gatsby-plugin-google-analytics": "^2.1.34",
+    "gatsby-plugin-manifest": "^2.2.40",
+    "gatsby-plugin-netlify": "^2.0.6",
+    "gatsby-plugin-netlify-cms": "^4.1.37",
+    "gatsby-plugin-react-helmet": "^3.0.4",
+    "gatsby-plugin-sass": "^2.0.7",
+    "gatsby-plugin-typescript": "^2.0.9",
+    "gatsby-remark-external-links": "^0.0.4",
+    "gatsby-source-filesystem": "^2.0.12",
+    "gatsby-transformer-remark": "^2.1.15",
+    "netlify-cms-app": "^2.11.11",
+    "node-sass": "^4.11.0",
+    "prop-types": "^15.6.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.4.1",
+    "react-helmet": "^5.2.0",
+    "uuid": "^3.2.1"
+  },
+  "keywords": [
+    "gatsby",
+    "typescript",
+    "netlify"
+  ],
+  "license": "MIT",
+  "main": "n/a",
+  "scripts": {
+    "clean": "rimraf .cache public",
+    "start:app": "npm run develop",
+    "start:lambda": "netlify-lambda serve src/lambda",
+    "start": "run-p start:**",
+    "build:app": "npm run clean && gatsby build",
+    "build:lambda": "netlify-lambda build src/lambda",
+    "build": "run-p build:**",
+    "develop": "npm run clean && gatsby develop",
+    "serve": "gatsby serve",
+    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.js}\""
+  },
+  "devDependencies": {
+    "@types/netlify-identity-widget": "^1.4.1",
+    "@types/react-helmet": "^5.0.8",
+    "http-proxy-middleware": "^0.20.0",
+    "netlify-lambda": "^1.4.2",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^1.15.3",
+    "rimraf": "^3.0.1",
+    "typescript": "^3.3.3333"
+  }
 }
