--- a/package.json
+++ b/package.json
@@ -1,64 +1,54 @@
 {
-  "name": "iamchriswilson.com",
-  "description": "Personal website of Chris Wilson",
-  "version": "1.0.0",
-  "author": "Chris Wilson",
+  "name": "gatsby-starter-netlify-cms",
+  "description": "Example Gatsby, and Netlify CMS project",
+  "version": "1.1.3",
+  "author": "Austin Green",
   "dependencies": {
-    "@types/google.analytics": "^0.0.40",
-    "@types/uuid": "^3.4.4",
-    "gatsby": "^2.0.66",
-    "gatsby-image": "^2.0.23",
-    "gatsby-plugin-google-analytics": "^2.1.34",
-    "gatsby-plugin-manifest": "^2.2.40",
-    "gatsby-plugin-netlify": "^2.0.6",
-    "gatsby-plugin-netlify-cms": "^4.1.37",
-    "gatsby-plugin-react-helmet": "^3.0.4",
-    "gatsby-plugin-sass": "^2.0.7",
-    "gatsby-plugin-typescript": "^2.0.9",
-    "gatsby-remark-external-links": "^0.0.4",
-    "gatsby-source-filesystem": "^2.0.12",
-    "gatsby-transformer-remark": "^2.1.15",
-    "netlify-cms-app": "^2.11.11",
-    "node-sass": "^4.11.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1",
-    "uuid": "^3.2.1"
+    "bulma": "^0.9.0",
+    "gatsby": "^4.0.0",
+    "gatsby-plugin-image": "^2.0.0",
+    "gatsby-plugin-netlify": "^3.14.0",
+    "gatsby-plugin-netlify-cms": "^6.0.0",
+    "gatsby-plugin-purgecss": "^6.0.0",
+    "gatsby-plugin-react-helmet": "^5.0.0",
+    "gatsby-plugin-sass": "^5.0.0",
+    "gatsby-plugin-sharp": "^4.0.0",
+    "gatsby-remark-copy-linked-files": "^5.0.0",
+    "gatsby-remark-images": "^6.0.0",
+    "gatsby-remark-relative-images": "^0.3.0",
+    "gatsby-source-filesystem": "^4.0.0",
+    "gatsby-transformer-remark": "^5.0.0",
+    "gatsby-transformer-sharp": "^4.0.0",
+    "lodash": "^4.17.15",
+    "lodash-webpack-plugin": "^0.11.4",
+    "netlify-cms-app": "^2.15.65",
+    "netlify-cms-media-library-cloudinary": "^1.3.10",
+    "netlify-cms-media-library-uploadcare": "^0.5.10",
+    "prop-types": "^15.6.0",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "react-helmet": "^6.0.0",
+    "sass": "^1.43.2",
+    "uuid": "^8.0.0"
   },
   "keywords": [
-    "gatsby",
-    "typescript",
-    "netlify"
+    "gatsby"
   ],
   "license": "MIT",
   "main": "n/a",
   "scripts": {
-    "clean": "rimraf .cache public",
-    "start:app": "npm run develop",
-    "start:lambda": "netlify-lambda serve src/lambda",
-    "start": "run-p start:**",
-    "build:app": "npm run clean && gatsby build",
-    "build:lambda": "netlify-lambda build src/lambda",
-    "build": "run-p build:**",
+    "clean": "gatsby clean",
+    "start": "npm run develop",
+    "build": "npm run clean && gatsby build",
     "develop": "npm run clean && gatsby develop",
     "serve": "gatsby serve",
-    "lint": "npm eslint src/ --ext .js,.tsx"
+    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.js}\"",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "@types/netlify-identity-widget": "^1.4.1",
-    "@types/prop-types": "^15.7.3",
-    "@types/react": "^16.9.19",
-    "@types/react-helmet": "^5.0.8",
-    "@typescript-eslint/eslint-plugin": "^2.18.0",
-    "@typescript-eslint/parser": "^2.18.0",
-    "eslint": "^6.8.0",
-    "eslint-plugin-react": "^7.18.0",
-    "http-proxy-middleware": "^0.20.0",
-    "netlify-lambda": "^1.4.2",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^1.15.3",
-    "rimraf": "^3.0.1",
-    "typescript": "^3.3.3333"
+    "prettier": "^2.0.5"
+  },
+  "engines": {
+    "node": ">= 14.15.0"
   }
 }
