--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Austin Green",
   "dependencies": {
     "gatsby": "^4.0.0",
+    "gatsby-plugin-google-analytics": "^4.10.0",
     "gatsby-plugin-image": "^2.0.0",
     "gatsby-plugin-netlify": "^3.14.0",
     "gatsby-plugin-netlify-cms": "^6.0.0",
@@ -24,6 +25,7 @@
     "netlify-cms-media-library-cloudinary": "^1.3.10",
     "netlify-cms-media-library-uploadcare": "^0.5.10",
     "postcss": "^8.4.12",
+    "postcss-nested": "^5.0.6",
     "prop-types": "^15.6.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
@@ -45,10 +47,10 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "prettier": "^2.0.5",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.41",
     "@types/react-dom": "^17.0.14",
+    "prettier": "^2.0.5",
     "typescript": "^4.6.2"
   },
   "engines": {
